--- a/AdressDetails/WebContent/WEB-INF/jdbc.properties
+++ b/AdressDetails/WebContent/WEB-INF/jdbc.properties
@@ -1,7 +1,7 @@
 
 
 #Test DB Information
-database.ip = jdbc:mysql://52.27.196.130:3306/test
+database.ip = jdbc:mysql://52.27.196.130:3306/lisadb
 database.username = root
 database.password = root
 database.driver = com.mysql.jdbc.Driver
