--- a/Registartion/WebContent/WEB-INF/jdbc.properties
+++ b/Registartion/WebContent/WEB-INF/jdbc.properties
@@ -7,4 +7,4 @@ database.password = root
 database.driver = com.mysql.jdbc.Driver
 
 
-URL=http://52.27.196.130:8081/AdressDetails/address?adharNumber=
+URL=http://52.27.196.130:8081/lisa1/address?adharNumber=
